<resources>
    <string name="app_name">Food Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="joke">Joke</string>
    <string name="recipes_fragment">Recipes Fragment</string>
    <string name="you_r_offline_please_connect_to_internet">You\'r offline. Please connect to Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="meal_type">Meal type</string>
    <string name="main_course">Main Course</string>
    <string name="diet_type">Diet Type</string>

    <string name="ovo_vegetarian">Ovo-Vegetarian</string>

    <string name="pescentarian">Pescentarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>

    <string name="sauce">Sauce</string>
    <string name="salad">Salad</string>
    <string name="drink">Drink</string>
    <string name="beverage">Beverage</string>
    <string name="appetizer">Appetizer</string>
    <string name="snacks">Snacks</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="finger_food">Finger Food</string>
    <string name="breakfast">Breakfast</string>
    <string name="side_dish">Side Dish</string>
    <string name="marinade">Marinade</string>
    <string name="bread">Bread</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="no_favourite_recipes">No Favourite Recipes</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="no_data_joke_text">Sorry, couldn\'t found any food joke for you.</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="_45">45</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="vegan">Vegan</string>
    <string name="cheap">Cheap</string>
</resources>