<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_over_view_scene"
    tools:context=".ui.fragments.overview.OverViewFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/main_recipe_imageView"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/custom_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_recipe_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/heart_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="@+id/textView_likes"
        app:layout_constraintStart_toStartOf="@+id/textView_likes"
        app:layout_constraintTop_toTopOf="@+id/time_image_view" />

    <ImageView
        android:id="@+id/time_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/textView_time"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/_45"
        android:textColor="@color/lightGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_recipe_imageView"
        app:layout_constraintEnd_toEndOf="@+id/time_image_view"
        app:layout_constraintStart_toStartOf="@+id/time_image_view" />

    <TextView
        android:id="@+id/textView_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="100"
        android:textColor="@color/lightGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_time"
        app:layout_constraintTop_toBottomOf="@+id/heart_image_view" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/courgette"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_recipe_imageView"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/vegetarian_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/recipe_name"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarian_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_check"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_check"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_check" />

    <ImageView
        android:id="@+id/diaryFree_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_txt"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_check"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/diaryFree_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/diary_free"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/diaryFree_check"
        app:layout_constraintStart_toEndOf="@+id/diaryFree_check"
        app:layout_constraintTop_toTopOf="@+id/diaryFree_check" />

    <TextView
        android:id="@+id/healthy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_check"
        app:layout_constraintStart_toEndOf="@+id/healthy_check"
        app:layout_constraintTop_toTopOf="@+id/healthy_check" />

    <ImageView
        android:id="@+id/healthy_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toEndOf="@+id/diaryFree_txt"
        app:layout_constraintTop_toTopOf="@+id/diaryFree_check"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/vegan_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_check"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_check"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegan_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_check"
        app:layout_constraintStart_toEndOf="@+id/vegan_check"
        app:layout_constraintTop_toTopOf="@+id/vegan_check" />

    <ImageView
        android:id="@+id/cheap_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/diaryFree_check"
        app:layout_constraintTop_toBottomOf="@+id/diaryFree_check"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheap_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_check"
        app:layout_constraintStart_toEndOf="@+id/cheap_check"
        app:layout_constraintTop_toTopOf="@+id/cheap_check" />

    <TextView
        android:id="@+id/glutenFree_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFree_check"
        app:layout_constraintStart_toEndOf="@+id/glutenFree_check"
        app:layout_constraintTop_toTopOf="@+id/glutenFree_check" />

    <ImageView
        android:id="@+id/glutenFree_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/healthy_check"
        app:layout_constraintTop_toBottomOf="@+id/healthy_check"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vegan_check"
        app:layout_constraintTop_toBottomOf="@+id/cheap_check"
        android:text="Description" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_txt">

        <TextView
            android:id="@+id/summary_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/oxygen"
            android:lineSpacingExtra="5sp"
            android:maxHeight="1000dp"
            android:padding="16dp"
            android:text="TextView"
            android:textSize="16sp" />
    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>